Bug 431190: Make Linux print dialog & page setup dialog modal. r+sr=vlad a=damons